--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.hgf.printer/com.hgf.printer.printer.HelloApplication</mainClass>
+                            <mainClass>com.hgf.printer/com.hgf.printer.HelloApplication</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
