--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,27 @@
             <artifactId>spring-boot-starter-log4j2</artifactId>
             <version>2.7.10</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/javax.jms/javax.jms-api -->
+<!--        <dependency>-->
+<!--            <groupId>javax.jms</groupId>-->
+<!--            <artifactId>javax.jms-api</artifactId>-->
+<!--            <version>2.0.1</version>-->
+<!--        </dependency>-->
+
+        <!-- https://mvnrepository.com/artifact/org.apache.activemq/activemq-client -->
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-client</artifactId>
+            <version>5.18.2</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>slf4j-api</artifactId>
+                    <groupId>org.slf4j</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
     </dependencies>
 
     <build>
